--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -1,9 +1,5 @@
-<div class="col-md-12 text-center" style="padding-left:0; padding-right:0; background-color: #36454f">
-  <ul class="nav" style="background-color: #36454f" >
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/">Home</a></li>
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/recipes">View Recipes</a></li>
-	    <li class="nav-links"><a class="links" href="#">Share a Recipe</a></li>
-  	</ul>
+<div class="col-md-12 text-center" style="padding-left:0; padding-right:0; background-color:#192330;">
+    <ng-include src="'./templates/partials/navbar-login.html'"></ng-include>
   <div class="col-md-12" style="padding-left:0; padding-right:0;">
   	<div class="col-md-6" style="padding-left:0; padding-right:0">
 	  	<div style="height: 50vh; width:100%; background-image:url('{{recipe.image}}'); background-size:cover; background-repeat:no-repeat;">
