--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,15 +1,12 @@
 <div class="home-background">
-	<ul class="nav">
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/">Home</a></li>
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/recipes">View Recipes</a></li>
-	    <li class="nav-links"><a class="links" href="#">Share a Recipe</a></li>
-  	</ul>
-  	
+	<ng-include src="'./templates/partials/navbar-home.html'"></ng-include>
+
 	<div class="container">
 		<div class="col-md-5">
 			<div class="home-text">
 				<H1>FIND. EAT. REPEAT.</H1>
 				<a href="http://localhost:3000/#/recipes" class="btn btn-default" role="button">Find a Recipe!</a>
+				<button class="facebook-login"><a id="btn-fblogin"  href="/auth/facebook" class="btn btn-primary">Login With Facebook</a></button>
 			</div>	
 		</div>
 	</div>
