--- a/public/templates/recipes-new.html
+++ b/public/templates/recipes-new.html
@@ -1,35 +1,84 @@
+<ng-include src="'./templates/partials/navbar-login.html'"></ng-include>
 <!-- ADD ng-submit to the form -->
-HELLO!
-    <form ng-submit="submit()">
-      <div>
-        <label for="newRecipe-title">Title:</label>
-        <input type="text" id="newTitle-name" ng-model="newRecipe.title" placeholder="Chicken Pot Pie">
+<div class="add-form-background">
+  <div style="margin-top: 3em">
+
+      <div class="col-sm-4 offset-sm-4  add-recipe-heading">
+        <p style="margin:0;">Add Your Recipe!</p>
       </div>
-      <div>
-        <label for="newRecipe-image">Image:</label>
-        <input type="text" id="newRecipe-image" ng-model="newRecipe.image" placeholder="Enter image URL..">
-      </div>
-      <div>
-        <label for="newRecipe-description">Description:</label>
-        <input type="text" id="newRecipe-description" ng-model="newRecipe.description" placeholder="Deliciously Rich!">
-      </div>
-      <div>
-        <label for="newRecipe-ingredients">Ingredients:</label>
-        <input type="text" id="newRecipe-ingredients" ng-model="newRecipe.ingredients" placeholder="Corn, beans etc.">
-      </div>
-      <div>
-        <label for="newRecipe-directions">Directions:</label>
-        <input type="text" id="newRecipe-directions" ng-model="newRecipe.directions" placeholder="Set oven to 400F">
-      </div>
-      <div>
-        <label for="newRecipe-prep-time">Prep Time:</label>
-        <input type="text" id="newRecipe-prep_time" ng-model="newRecipe.prep_time" placeholder="10 minutes">
-      </div>
-      <div>
-        <label for="newRecipe-cook-time">Cook Time:</label>
-        <input type="text" id="newRecipe-cook_time" ng-model="newRecipe.cook_time" placeholder="10 minutes">
-      </div>
-      <div>
-        <input type="submit" value="New Recipe">
-      </div>
-    </form>
+
+  <div class="col-sm-4 offset-sm-4" style="background-color:#434B56; opacity:.95;">
+    
+    
+      <form ng-submit="sendPost()">
+
+        <div class="col-sm-12"">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-title">Title:</label>
+            <input class="add-input" type="text" id="newTitle-name" ng-model="newRecipe.title" placeholder="Chicken Pot Pie">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-image">Image:</label>
+            <input class="add-input" type="text" id="newRecipe-image" ng-model="newRecipe.image" placeholder="Enter image URL..">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-description">Description:</label>
+            <input class="add-input" type="text" id="newRecipe-description" ng-model="newRecipe.description" placeholder="Deliciously Rich!">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+          <label class="add-recipe-label" for="newRecipe-ingredients">Ingredients:</label>
+          </div>
+          <input type="button" class="btn btn-info add-ingredient-button" ng-click="addNewIngredient()" value="Add Ingredient">
+            <fieldset data-ng-repeat="field in newRecipe.ingredients track by $index">
+              <textarea id="add-ingredient-textarea" class="add-input" rows="4" cols="50" ng-model=" newRecipe.ingredients[$index]" placeholder="2 lbs of groung chicken"></textarea>
+              <button type="button" class="btn btn-default btn-sm btn-delete-ingredient" ng-click="removeIngredient($index)">
+                <span class="glyphicon glyphicon-minus"></span><p style="margin-top:-3px"> X </p>
+              </button>
+            </fieldset>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-directions">Directions:</label>
+            <input class="add-input" type="text" id="newRecipe-directions" ng-model="newRecipe.directions" placeholder="Set oven to 400F">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-prep-time">Prep Time:</label>
+            <input class="add-input" type="text" id="newRecipe-prep_time" ng-model="newRecipe.prep_time" placeholder="10 minutes">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <label class="add-recipe-label" for="newRecipe-cook-time">Cook Time:</label>
+            <input class="add-input" type="text" id="newRecipe-cook_time" ng-model="newRecipe.cook_time" placeholder="30 minutes">
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div>
+            <!-- <input class="add-recipe-submit" type="submit" value="Submit"> -->
+            <input type="submit" class="btn btn-info recipe-submit-button"  value="Submit">
+          </div>
+        </div>
+
+      </form>
+
+
+  </div> 
+  </div>
+</div>   
+
+
