--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -1,14 +1,10 @@
-<div class="text-center">
-	<ul class="nav" style="background-color: #36454f " >
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/">Home</a></li>
-	    <li class="nav-links"><a class="links" href="http://localhost:3000/#/recipes">View Recipes</a></li>
-	    <li class="nav-links"><a class="links" href="#">Share a Recipe</a></li>
-  	</ul>
+<ng-include src="'./templates/partials/navbar-login.html'"></ng-include>
+
 	<div class="col-md-12">
 		<div class="row">
 			<div ng-repeat="recipe in recipes" class="col-md-3 recipe-full">
 				<a href="/#/recipes/{{recipe.title}}">
-					<div style="height: 350px; width:100%; background-image:url('{{recipe.image}}'); background-size:cover; background-repeat:no-repeat;">
+					<div style="height: 33vh; width:100%; background-image:url('{{recipe.image}}'); background-size:cover; background-repeat:no-repeat;">
 							<div id="recipe-block">	
 								<h2 id="recipe-title">{{recipe.title}}</h2>	
 							</div>
@@ -17,7 +13,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+
+
 	
 
 
