changed localhost links

--- a/public/templates/partials/navbar-home.html
+++ b/public/templates/partials/navbar-home.html
@@ -1,11 +1,11 @@
 <nav class = "navbar-home navbar-default container-fluid" role = "navigation">
 	<div class = "navbar-header">	
-    	<a class = "navbar-brand brand-home" href = "http://localhost:3000/#/" target="blank"><img src="../../css/images/recipe-logo-white.png" id="logo-white"></a>
+    	<a class = "navbar-brand brand-home" href = "/#/" target="blank"><img src="../../css/images/recipe-logo-white.png" id="logo-white"></a>
     </div>
 
     <div>
       	<ul class = "nav-home navbar-nav">
-	        <li class = "active navbar-home-links"><a href = "http://localhost:3000/#/recipes">View Recipes</a></li>
+	        <li class = "active navbar-home-links"><a href = "/#/recipes">View Recipes</a></li>
 	        <li class = "active navbar-home-links"><a href = "#">Add Recipe</a></li>
         </ul>
    </div>  
