--- a/public/templates/partials/navbar-login.html
+++ b/public/templates/partials/navbar-login.html
@@ -2,7 +2,7 @@
 
 <nav class = "navbar-login navbar-default container-fluid" role = "navigation">
 	<div class = "navbar-header">	
-    	<a class = "navbar-brand brand-login" href = "http://localhost:3000/#/" target="blank"><img src="../../css/images/recipe-logo-grey.png" id="logo-grey"></a>
+    	<a class = "navbar-brand brand-login" href = "/#/" target="blank"><img src="../../css/images/recipe-logo-grey.png" id="logo-grey"></a>
     </div>
 
     <div class="pull-right">
