--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -5,7 +5,7 @@
 		<div class="col-md-5">
 			<div class="home-text">
 				<H1>FIND. EAT. REPEAT.</H1>
-				<a href="http://localhost:3000/#/recipes" class="btn btn-default" role="button">Find a Recipe!</a>
+				<a href="/#/recipes" class="btn btn-default" role="button">Find a Recipe!</a>
 				<button class="facebook-login"><a id="btn-fblogin"  href="/auth/facebook" class="btn btn-primary">Login With Facebook</a></button>
 			</div>	
 		</div>
