--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -29,7 +29,8 @@
 		  		<p class="ingredient-item">{{ingredient}}</p>
 		  		<hr>
 		  	</div> 
-		  	<div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/{{recipe.title}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F&amp;src=sdkpreparse">Share</a></div>
+	  </div>
+	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/{{recipe.title}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F&amp;src=sdkpreparse">Share</a>
 	  </div>
 	</div>  	
 
