--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -1,11 +1,11 @@
 
 <div class="col-md-12 text-center" style="padding-left:0; padding-right:0; background-color:#192330;">
-<meta charset="utf-8">
+<!-- <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta property="og:url" content="https://recipe-findr.herokuapp.com/Slow%20Cooker%20Mongolian%20Beef" />
     <meta property="og:title" content="{{recipe.title}}" />
-    <meta property="og:image" content="{{recipe.image}}" />
+    <meta property="og:image" content="{{recipe.image}}" /> -->
 
     <div id="fb-root"></div>
 		<script>(function(d, s, id) {
