--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -20,7 +20,7 @@
 				<p class="edit-delete"><button class='edit-recipe' ><a ng-href ='/#/recipes/{{recipe.title}}/edit'>Edit</a></button>&nbsp;<button  class='delete-recipe' ng-click='recipes.deleteRecipe(recipe.title)'>Delete</button></p>
 			</div>
 		</div>
-  	</div>		
+  	</div>	
 	
 	<div class="col-md-6 list-section">	
 	  <div class="ingredients notebook">
@@ -36,3 +36,5 @@
 
   </div>	
 </div>
+
+  	<img style="height:400px width:400px" src="http://thewoksoflife.com/wp-content/uploads/2015/06/mongolian-beef-8.jpg">	
