--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -32,11 +32,11 @@
 		  		<p class="ingredient-item">{{ingredient}}</p>
 		  		<hr>
 		  	</div> 
-		  	<div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/Slow%20Cooker%20Mongolian%20Beef" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2FSlow%2520Cooker%2520Mongolian%2520Beef&amp;src=sdkpreparse">Share</a></div>	
 	  </div>
+	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/Slow%20Cooker%20Mongolian%20Beef" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2FSlow%2520Cooker%2520Mongolian%2520Beef&amp;src=sdkpreparse">Share</a></div>
 	</div>  
 
   </div>	
 </div>
 
-  	<img style="height:400px width:400px" src="http://thewoksoflife.com/wp-content/uploads/2015/06/mongolian-beef-8.jpg">	
+  	<img class="fb-picture" src="http://thewoksoflife.com/wp-content/uploads/2015/06/mongolian-beef-8.jpg">	
