testing facebook meta tags

--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -39,4 +39,4 @@
   </div>	
 </div>
 
-  	<img class="fb-picture" src="http://thewoksoflife.com/wp-content/uploads/2015/06/mongolian-beef-8.jpg">	
+  	<img class="fb-picture" src="{{recipe.image}}">	
