--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -33,7 +33,7 @@
 		  		<hr>
 		  	</div> 
 	  </div>
-	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2FS{{facebook.title}}&amp;src=sdkpreparse">Share</a></div>
+	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2FS{{encodedTitle}}&amp;src=sdkpreparse">Share</a></div>
 	</div>  
 
   </div>	
