--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -33,10 +33,10 @@
 		  		<hr>
 		  	</div> 
 	  </div>
-	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2FS{{encodedTitle}}&amp;src=sdkpreparse">Share</a></div>
+	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="/sharer/sharer.php?app_id=144595975984486&sdk=joey&u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2F{{encodedTitle}}&display=popup&ref=plugin&src=share_button">Share</a></div>
 	</div>  
 
   </div>	
 </div>
 
-  	<img class="fb-picture" src={{recipe.image}}>	
+  	<img class="fb-picture" src="{{recipe.image}}">	
