--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -33,8 +33,11 @@
 		  		<hr>
 		  	</div> 
 	  </div>
-	  <div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="/sharer/sharer.php?app_id=144595975984486&sdk=joey&u=https%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes%2F{{encodedTitle}}&display=popup&ref=plugin&src=share_button">Share</a></div>
-	</div>  
+	  <div class="fb-share-button" 
+		data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" 
+		data-layout="button_count">
+	</div>
+
 
   </div>	
 </div>
