changed position of script tag

--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -35,7 +35,7 @@
 	  </div>
 	  <div class="fb-share-button" 
 		data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" 
-		data-layout="button_count">
+		data-layout="button">
 	</div>
 
 
