hard coding og tags

--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -42,4 +42,4 @@
   </div>	
 </div>
 
-  	<img class="fb-picture" src="{{recipe.image}}">	
+  	<img class="fb-picture" src="http://i.imgur.com/6P5Lqct.jpg">	
