changed share button

--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -34,7 +34,7 @@
 		  	</div> 
 	  </div>
 	  <div class="fb-share-button" 
-		data-href="https://recipe-findr.herokuapp.com/#/recipes/{{encodedTitle}}" 
+		data-href="https://recipe-findr.herokuapp.com/#/recipes" 
 		data-layout="button">
 	</div>
 
