--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -18,7 +18,7 @@
 				<p class="recipe-directions"><strong>Directions:</strong> {{recipe.directions}}</p>	
 			</div>
 			<div>
-				<p class="edit-delete"><button class='edit-recipe' ><a ng-href ='/#/recipes/{{recipe.title}}/edit'>Edit</a></button>&nbsp;<button  class='delete-recipe' ng-click='recipes.deleteRecipe(recipe.title)'>Delete</button></p>
+				<p class="edit-button"><button class='edit-recipe' ><a ng-href ='/#/recipes/{{recipe.title}}/edit'>Edit</a></button></p>
 			</div>
 		</div>
   	</div>	
