testing layout of share button

--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -33,7 +33,7 @@
 		  		<hr>
 		  	</div> 
 	  </div>
-	  <div class="fb-share-button" 
+	  <div style ="background-image:url(https://powhf.org.au/wp-content/uploads/2016/01/facebook-share-button.png)" class="fb-share-button" 
 		data-href="https://recipe-findr.herokuapp.com/#/recipes" 
 		data-layout="button">
 	</div>
