profile header size

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,7 +1,7 @@
 <ng-include src="'./templates/partials/navbar-login.html'"></ng-include>
 <div class="profile-header">
-	<div class="profile-welcome col-md-4 offset-sm-4">
-	<p>Welcome {{user.facebook.name}}!</p></div>
+	<div class="col-md-4 offset-sm-4">
+	<p class="profile-welcome">Welcome {{user.facebook.name}}!</p></div>
 	<img class="profile-img" ng-src="{{user.facebook.photos}}">
 </div>
 
