--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -1,7 +1,6 @@
 
 <div class="col-md-12 text-center" style="padding-left:0; padding-right:0; background-color:#192330;">
- 
-
+ {{facebook.title}}
     <ng-include src="'./templates/partials/navbar-login.html'"></ng-include>
   <div class="col-md-12" style="padding-left:0; padding-right:0;">
   	<div class="col-md-6" style="padding-left:0; padding-right:0">
