--- a/public/templates/recipes-show.html
+++ b/public/templates/recipes-show.html
@@ -36,7 +36,7 @@
 		data-href="https://recipe-findr.herokuapp.com/#/recipes" 
 		data-layout="button">
 	</div> -->
-	<div class="fb-share-button" data-href="http://recipe-findr.herokuapp.com/#/recipes" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes&amp;src=sdkpreparse">Share</a></div>
+	<div id="fb-share-button" data-href="http://recipe-findr.herokuapp.com/#/recipes" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Frecipe-findr.herokuapp.com%2F%23%2Frecipes&amp;src=sdkpreparse">Share</a></div>
 
 
   </div>	
