adding conditional logic for logged out user

--- a/public/templates/partials/navbar-login.html
+++ b/public/templates/partials/navbar-login.html
@@ -7,6 +7,7 @@
 
     <div class="pull-right">
       	<ul class = "nav-profile navbar-nav">
+      		<li class = "active navbar-profile-links"><a href = "/#/profile">Profile</a></li>
 	        <li class = "active navbar-profile-links"><a href = "/#/recipes/new">Add Recipe</a></li>
 	        <li class = "active navbar-profile-links"><a href = "/logout">Logout</a></li>
         </ul>
