--- a/public/templates/recipes-edit.html
+++ b/public/templates/recipes-edit.html
@@ -4,7 +4,7 @@
   <div style="margin-top: 3em">
 
       <div class="col-sm-4 offset-sm-4  add-recipe-heading">
-        <p style="margin:0;">Add Your Recipe!</p>
+        <p style="margin:0;">Edit Your Recipe!</p>
       </div>
 
   <div class="col-sm-4 offset-sm-4" style="background-color:#434B56; opacity:.95;">
